the config file reader updated